--- a/project/src/main/res/layout/widget_launch_nearby_deals.xml
+++ b/project/src/main/res/layout/widget_launch_nearby_deals.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.NearbyHotelsWidget xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ECEFF1"
-    android:orientation="vertical">
+    android:background="#ECEFF1">
 
-    <com.expedia.bookings.widget.NearbyHotelsWidget
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/nearby_hotel_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/nearby_hotel_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </com.expedia.bookings.widget.NearbyHotelsWidget>
-</LinearLayout>
+</com.expedia.bookings.widget.NearbyHotelsWidget>
