--- a/project/src/main/res/layout/snippet_nearby_hotels_header.xml
+++ b/project/src/main/res/layout/snippet_nearby_hotels_header.xml
@@ -2,7 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingLeft="32dp"
+    android:paddingRight="32dp"
+    android:paddingTop="130dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,7 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_gravity="center_vertical|right"
-        android:gravity="right"
         app:radius="4dp">
 
         <TextView
