--- a/project/src/travelocity/res/layout/fragment_tablet_launch.xml
+++ b/project/src/travelocity/res/layout/fragment_tablet_launch.xml
@@ -1,7 +1,7 @@
 <FrameLayout
+    android:id="@+id/root_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,63 +10,69 @@
         android:layout_width="match_parent"
         android:layout_height="?android:actionBarSize"
         android:layout_gravity="top"
-        android:background="@drawable/top_gradient_launch"/>
-
-    <include layout="@layout/tablet_launch_collections_search_layout" />
+        android:background="@drawable/top_gradient_launch" />
 
 
     <FrameLayout
-        android:id="@+id/waypoint_container"
+        android:id="@+id/tiles_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
-        android:background="@color/launch_pin_detail_background"/>
+        android:layout_gravity="top"
+        android:background="@drawable/bg_tablet_bottom_fade"
+        android:gravity="top|center_horizontal"
+        android:paddingTop="?android:actionBarSize" />
 
+    <include layout="@layout/tablet_launch_collections_search_layout" />
 
     <com.expedia.bookings.widget.TouchableFrameLayout
         android:id="@+id/list_detail_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
+        android:layout_marginTop="@dimen/extra_status_bar_padding"
+        android:background="@color/launch_pin_detail_background"
         android:paddingTop="?android:actionBarSize"
-        android:layout_marginBottom="@dimen/extra_navigation_bar_padding"
-        android:background="@color/launch_pin_detail_background"/>
+        android:visibility="gone" />
+
+    <FrameLayout
+        android:id="@+id/waypoint_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/launch_pin_detail_background"
+        android:visibility="invisible" />
 
     <com.expedia.bookings.widget.TouchableFrameLayout
         android:id="@+id/pin_detail_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
-        android:background="@color/launch_pin_detail_background"/>
+        android:background="@color/launch_pin_detail_background"
+        android:visibility="invisible" />
 
     <com.expedia.bookings.widget.TouchableFrameLayout
         android:id="@+id/no_connectivity_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"
-        android:background="#070f24">
+        android:background="#070f24"
+        android:visibility="visible">
 
         <View
             android:id="@+id/globe_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
-            android:alpha="0.1" />
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
             android:layout_gravity="center"
+            android:layout_marginTop="40dp"
             android:orientation="vertical">
 
             <com.larvalabs.svgandroid.widget.SVGView
                 android:layout_width="96dp"
                 android:layout_height="72dp"
                 android:layout_gravity="center_horizontal"
-                app:zoomMode="fitDocument"
                 android:visibility="gone"
-                app:src="@raw/ic_no_connection"/>
+                app:zoomMode="fitDocument" />
 
             <com.expedia.bookings.widget.TextView
                 android:layout_width="wrap_content"
@@ -75,9 +81,9 @@
                 android:layout_marginTop="22dp"
                 android:gravity="center_horizontal"
                 android:text="@string/network_unavailable"
-                android:textSize="22sp"
                 android:textColor="#ffffff"
-                app:textStyle="medium"/>
+                android:textSize="22sp"
+                app:textStyle="medium" />
 
             <com.expedia.bookings.widget.TextView
                 android:layout_width="wrap_content"
@@ -86,9 +92,9 @@
                 android:layout_marginTop="9dp"
                 android:gravity="center_horizontal"
                 android:text="@string/error_network_unavailable"
-                android:textSize="16sp"
                 android:textColor="#ffffff"
-                app:textStyle="light"/>
+                android:textSize="16sp"
+                app:textStyle="light" />
         </LinearLayout>
     </com.expedia.bookings.widget.TouchableFrameLayout>
 
