--- a/project/src/travelocity/res/values/styles.xml
+++ b/project/src/travelocity/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:mobiata="http://schemas.android.com/apk/res-auto">
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Travelocity Rating bar -->
     <style name="RatingBar.UserReview.Blue">
@@ -13,5 +13,15 @@
 
     <style name="Widget.ListView.DropDown.TVLY" parent="@android:style/Widget.Holo.Light.ListView.DropDown">
         <item name="android:background">@drawable/bg_action_bar_travelocity</item>
+    </style>
+
+    <style name="DestinationTileUpperTextAppearance">
+        <item name="android:textColor">@color/bg_blue_color_travelocity</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="DestinationTileLowerTextAppearance">
+        <item name="android:textColor">@color/bg_blue_color_travelocity</item>
+        <item name="android:textSize">14sp</item>
     </style>
 </resources>
