--- a/project/src/main/res/layout/lx_details_presenter.xml
+++ b/project/src/main/res/layout/lx_details_presenter.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.presenter.lx.LXDetailsPresenter xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
@@ -63,5 +64,15 @@
         </LinearLayout>
 
     </com.expedia.bookings.widget.LXActivityDetailsWidget>
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:background="@color/lx_primary_color"
+        android:minHeight="?attr/actionBarSize"
+        app:subtitleTextAppearance="@style/LXToolbarSubtitleTextAppearance"
+        app:titleTextAppearance="@style/LXToolbarTitleTextAppearance" />
 
 </com.expedia.bookings.presenter.lx.LXDetailsPresenter>
