--- a/project/src/main/res/layout/lx_result_presenter.xml
+++ b/project/src/main/res/layout/lx_result_presenter.xml
@@ -1,4 +1,5 @@
 <com.expedia.bookings.presenter.lx.LXResultsPresenter xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,11 +16,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:paddingRight="16dp"
+        android:paddingTop="?attr/actionBarSize">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/lx_search_results_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </com.expedia.bookings.widget.LXSearchResultsWidget>
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:background="@color/lx_primary_color"
+        android:minHeight="?attr/actionBarSize"
+        app:subtitleTextAppearance="@style/LXToolbarSubtitleTextAppearance"
+        app:titleTextAppearance="@style/LXToolbarTitleTextAppearance" />
+
 </com.expedia.bookings.presenter.lx.LXResultsPresenter>
