fix happypath checkout

--- a/project/src/main/res/layout/widget_car_checkout.xml
+++ b/project/src/main/res/layout/widget_car_checkout.xml
@@ -200,7 +200,7 @@
     </LinearLayout>
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/checkout_toolbar"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_gravity="top"
