--- a/project/src/main/res/layout/snippet_nearby_hotels_header.xml
+++ b/project/src/main/res/layout/snippet_nearby_hotels_header.xml
@@ -3,17 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="32dp"
-    android:paddingRight="32dp"
+    android:paddingLeft="24dp"
+    android:paddingRight="24dp"
     android:paddingTop="130dp">
 
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left|center_vertical"
         android:text="@string/nearby_deals_title"
         android:textColor="#222222"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        app:textStyle="light"/>
 
     <com.expedia.bookings.widget.RoundedCornerFrameLayout
         android:layout_width="wrap_content"
