--- a/project/src/main/res/layout/snippet_nearby_hotels_header.xml
+++ b/project/src/main/res/layout/snippet_nearby_hotels_header.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
-    android:paddingTop="130dp">
+    android:paddingTop="140dp"
+    android:paddingBottom="10dp">
 
     <com.expedia.bookings.widget.TextView
         android:layout_width="wrap_content"
