--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -32,6 +32,8 @@
     <dimen name="launch_tile_hotel_sale_vertical_padding">4dp</dimen>
     <dimen name="launch_tile_hotel_sale_drawable_padding">3dp</dimen>
     <dimen name="launch_tile_hotel_sale_right_margin">12dp</dimen>
+    <dimen name="launch_lob_tiles">110dp</dimen>
+    <dimen name="launch_lob_margin">4dp</dimen>
 
     <!-- Itinerary dimens -->
     <dimen name="itin_card_collapsed_height">138.5dp</dimen>
