--- a/project/src/main/res/layout/fragment_new_phone_launch.xml
+++ b/project/src/main/res/layout/fragment_new_phone_launch.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ECEFF1"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:theme="@style/Theme.AppCompat.Light">
 
     <!-- ActionBar spacer -->
 
