--- a/project/src/main/res/layout/section_nearby_hotel_summary.xml
+++ b/project/src/main/res/layout/section_nearby_hotel_summary.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="160dp"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="4dp"
     app:cardPreventCornerOverlap="false">
 
