--- a/project/src/main/res/layout/snippet_nearby_hotels_header.xml
+++ b/project/src/main/res/layout/snippet_nearby_hotels_header.xml
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#1C468D"
+            android:foreground="?android:attr/selectableItemBackground"
             android:padding="8dp"
             android:text="@string/nearby_deals_expand"
             android:textAllCaps="true"
