--- a/project/src/main/res/layout/section_lx_offer_row.xml
+++ b/project/src/main/res/layout/section_lx_offer_row.xml
@@ -2,47 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="10dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/offer_row"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <TextView
-            android:textStyle="bold"
-            android:id="@+id/offer_title"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:layout_weight="0.7">
+
+            <TextView
+                android:id="@+id/offer_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:maxLines="1"
+                android:textColor="@android:color/black"
+                android:textSize="10sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/price_summary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:maxLines="1"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/select_tickets"
+            android:layout_width="0dp"
+            android:layout_height="43dp"
+            android:layout_marginTop="16dp"
+            android:paddingBottom="6dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:paddingTop="6dp"
+            android:text="Select Tickets"
+            android:textAllCaps="false"
+            android:textColor="@android:color/black"
             android:textSize="10sp"
-            android:maxLines="1"
-            android:textColor="@android:color/black"/>
-
-        <TextView
-            android:id="@+id/price_summary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:textSize="12sp"
-            android:maxLines="1"
-            android:textColor="@android:color/black"/>
+            android:layout_weight="0.3"/>
     </LinearLayout>
 
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="16dp"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:textColor="@android:color/black"
-        android:id="@+id/select_tickets"
-        android:textAllCaps="false"
-        android:textSize="10sp"
-        android:text="Select Tickets" />
+    <include
+        android:id="@+id/offer_tickets_picker"
+        layout="@layout/widget_lx_ticket_selection"
+        android:visibility="gone" />
 
 </LinearLayout>
