--- a/project/src/main/res/layout/lx_result_presenter.xml
+++ b/project/src/main/res/layout/lx_result_presenter.xml
@@ -13,11 +13,30 @@
 
     <com.expedia.bookings.widget.LXSearchResultsWidget
         android:id="@+id/lx_search_results_widget"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="?attr/actionBarSize">
+
+        <LinearLayout
+            android:id="@+id/lx_search_failure"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/error_car_search_message" />
+
+            <Button
+                android:id="@+id/edit_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/edit_search" />
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/lx_search_results_list"
