--- a/project/src/main/res/layout/snippet_launch_list_header.xml
+++ b/project/src/main/res/layout/snippet_launch_list_header.xml
@@ -9,10 +9,10 @@
     android:paddingBottom="10dp">
 
     <com.expedia.bookings.widget.TextView
+        android:id="@+id/launch_list_header_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left|center_vertical"
-        android:text="@string/nearby_deals_title"
         android:textColor="#222222"
         android:textSize="20sp"
         app:textStyle="light"/>
@@ -24,7 +24,7 @@
         android:layout_gravity="center_vertical|right"
         app:radius="4dp">
 
-        <TextView
+        <com.expedia.bookings.widget.TextView
             android:id="@+id/see_all_hotels_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,7 +33,8 @@
             android:padding="8dp"
             android:text="@string/nearby_deals_expand"
             android:textAllCaps="true"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            android:visibility="gone"/>
 
     </com.expedia.bookings.widget.RoundedCornerFrameLayout>
 
