--- a/project/src/main/res/layout/widget_launch_list.xml
+++ b/project/src/main/res/layout/widget_launch_list.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.NearbyHotelsWidget xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.LaunchListWidget xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#ECEFF1">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/nearby_hotel_list"
+        android:id="@+id/launch_item_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-</com.expedia.bookings.widget.NearbyHotelsWidget>
+</com.expedia.bookings.widget.LaunchListWidget>
