--- a/project/src/main/res/layout/car_results_presenter.xml
+++ b/project/src/main/res/layout/car_results_presenter.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.presenter.CarsResultsPresenter xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.presenter.CarResultsPresenter xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -220,4 +220,4 @@
     </FrameLayout>
 
 
-</com.expedia.bookings.presenter.CarsResultsPresenter>
+</com.expedia.bookings.presenter.CarResultsPresenter>
