--- a/project/src/main/res/layout/cars_login_widget.xml
+++ b/project/src/main/res/layout/cars_login_widget.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.CarsLoginWidget xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.CarLoginWidget xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -284,4 +284,5 @@
         android:gravity="center|left"
         android:drawablePadding="8dp"
         android:text="Sign in with Expedia" />
-</com.expedia.bookings.widget.CarsLoginWidget>
+
+</com.expedia.bookings.widget.CarLoginWidget>
