--- a/project/src/main/res/layout/widget_car_date_time.xml
+++ b/project/src/main/res/layout/widget_car_date_time.xml
@@ -27,7 +27,7 @@
         app:calendarHighlightColor="@color/cars_secondary_color"
         app:calendarHighlightInverseColor="@color/cars_secondary_color"
         app:calendarInvalidDaysColor="@color/cars_invalid_days_calendar"
-        app:calendarLayout="@layout/cars_calendar"
+        app:calendarLayout="@layout/car_calendar"
         app:calendarSecondaryColor="@color/cars_valid_days_calendar"
         app:calendarTodayColor="@color/cars_valid_days_calendar"
         app:calendarWeekSelectionColor="@color/cars_primary_color" />
