4063. Cars - Checkout - Driver info
Bind traveler info to the widget.
Also update it upon login and logout.

--- a/project/src/main/res/layout/car_driver_widget.xml
+++ b/project/src/main/res/layout/car_driver_widget.xml
@@ -20,7 +20,7 @@
         android:drawableLeft="@drawable/driver_large"
         android:gravity="center|left"
         android:drawablePadding="8dp"
-        android:text="Enter driver details" />
+        android:text="@string/enter_driver_details" />
 
     <com.expedia.bookings.section.SectionTravelerInfo
         android:layout_width="match_parent"
