--- a/project/src/main/res/layout/car_driver_widget.xml
+++ b/project/src/main/res/layout/car_driver_widget.xml
@@ -38,9 +38,10 @@
         <EditText
             android:id="@+id/edit_email_address"
             android:layout_width="match_parent"
-            android:nextFocusDown="@+id/edit_phone_number"
             android:layout_height="wrap_content"
             android:hint="@string/email_address_hint"
+            android:nextFocusRight="@+id/edit_phone_number"
+            android:nextFocusDown="@+id/edit_phone_number"
             android:singleLine="true"
             android:textSize="16sp" />
 
